utils/nohup.out
Traceback (most recent call last):
  File "/n/HEPL/wblaine/simulation/EFieldCalculation/efield_from_tdJ/utils/bin_to_csv.py", line 5, in <module>
    from simulated_geometry import SimulationVolume, PhysicalValue
ModuleNotFoundError: No module named 'simulated_geometry'
Traceback (most recent call last):
  File "/n/HEPL/wblaine/simulation/EFieldCalculation/efield_from_tdJ/utils/bin_to_csv.py", line 5, in <module>
    from simulated_geometry import SimulationVolume, PhysicalValue
  File "/n/HEPL/wblaine/simulation/EFieldCalculation/efield_from_tdJ/src/simulated_geometry.py", line 284
    def get_cell_corner(self, i : int, j : int, k : int, c_str)
                                                               ^
SyntaxError: invalid syntax
